fix: security + stability improvements from code review
- CRITICAL: deleteRequestSet now checks owner/ADMIN authorization
- CRITICAL: completeRequest uses pessimistic lock to prevent race condition
- HIGH: CORS reads allowed-origins from application.yaml instead of hardcode
- MEDIUM: POST createRequestSet returns 201 instead of 200
- MEDIUM: JWT validation exceptions now logged for security auditing

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>